--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   <h1>CSRP law handbook</h1>
   <p class="mini">
     accurate to california law; grouped by category; each entry: statute, definition, real-world examples, exclusions, and penalties.
-    this is practical information, not legal advice. However everything was fact checked, verify against cited code sections before relying on ingame.
+    this is practical information, not legal advice. However everything was fact checked, verify against cited code sections before relying on ingame. (made by rx7y on discord)
   </p>
   <div class="row">
     <div class="col">
